# bitvia-forum

./: .gitignore  Cargo.toml
db/: schema.sql
src/: main.rs  models.rs  rpc.rs  state.rs  supply.rs  utils.rs
src/handlers/: address.rs  blocks.rs  mempool.rs  mod.rs  network.rs  pages.rs  tx.rs
static/css/: main.css
static/js/: main.js
templates/: index.html
