[package]
name = "btc-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
bitcoin = "0.32.7"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
electrum-client = "0.24.1"
feed-rs = "2.3.1"
hex = "0.4.3"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
url = "2.5.7"
